added the MagPi application MFG-1S_Gateway and the script to push the magnetometer data to the database server

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#Eclipse .settings Directory (the .project and .cproject files should be kept to be able to use "export of existing project into workspace")
+.settings/
