- extended configuration handling through configuration file (TOML) - added FIFO (named pipe) for commanding / changing configuration of Magnetometer and Gateway App - recording minimum / maximum values of averaging periods - generating time drift metrics - adding a NULL vector before stopping the gateway application so that a gap is shown in Grafana - added housekeeping handling - commanding the magnetometer to output 10Hz data - added reconfiguration of baudrate after magnetometer reset command - corrected several bugs

--- a/MagPi_TPSO/MFG-1S_Gateway/Makefile
+++ b/MagPi_TPSO/MFG-1S_Gateway/Makefile
@@ -7,18 +7,18 @@
 
 CC = arm-linux-gnueabihf-gcc
 
-CFLAGS		= -Wall
+GIT_VERSION := "$(shell git describe --dirty=y --abbrev=7  --always --tags)"
+CFLAGS		= -Wall -DVERSION=\"$(GIT_VERSION)\" -D_GNU_SOURCE
 ifdef DEBUG
     CFLAGS += -O0 -g
 else
 	CFLAGS += -O3
 endif
 INCLUDES	= -I../
-LFLAGS		= -L../tomlc99
-LIBS		= -ltoml
+LIBS		= ../tomlc99/libtoml.a
 
 SRCS = MFG-1S_Gateway.c data_processing.c globals.c helpers.c log.c packet.c serial.c signal.c cmd.c fifos.c toml.c
-
+DEPS = data_processing.h globals.h helpers.h log.h packet.h serial.h signal.h cmd.h fifos.h toml.h
 OBJS = $(SRCS:.c=.o)
 
 MAIN = MFG-1S_Gateway
@@ -28,7 +28,7 @@ MAIN = MFG-1S_Gateway
 all:    $(MAIN)
 	@echo  MFG-1S_Gateway has been compiled successfully
 
-$(MAIN): $(OBJS) 
+$(MAIN): $(OBJS) $(DEPS)
 	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
 
 .c.o:
