--- a/MagPi_TPSO/MFG-1S_Gateway/MFG-1S_Gateway.toml
+++ b/MagPi_TPSO/MFG-1S_Gateway/MFG-1S_Gateway.toml
@@ -9,7 +9,7 @@ version_minor = 0
 ################################################################################
 # Version History                                                              #
 ################################################################################
-# v1.0 - 2020/09/16: Built-in default configuration                            #
+# v1.0 - 2020/09/16: Initial configuration                                     #
 ################################################################################
 
 [Gateway]
@@ -17,11 +17,11 @@ version_minor = 0
 # Sampling rate divider for magnetic field data
 # Data type: integer
 # Valid values / range: 0 ... 8640000 (off ... once per day)
-# Comment: The default magnetic field data rate of the magnetometer is 100 Hz
-#          (if not commanded differently). A divider of 6000 for example
+# Comment: The default magnetic field data rate of the magnetometer is 10 Hz
+#          (if not commanded differently). A divider of 600 for example
 #          reduces this down to 1 sample per minute. That's the rate of the
 #          data which is pushed into the database on the data server.
-Bfield_Divider = 6000
+Bfield_Divider = 300
 
 # Sampling rate divider for housekeeping (HK) data
 # Data type: integer
@@ -30,7 +30,7 @@ Bfield_Divider = 6000
 #          240 for example reduces this down to 1 sample every 4 minutes. 
 #          That's the rate of the data which is pushed into the database 
 #          on the data server.
-HK_Divider = 240
+HK_Divider = 300
 
 # Specifies if the data rate is reduced using averaging (box car) or decimation.
 # Data type: integer
@@ -66,11 +66,11 @@ Serial_Port = "/dev/ttyUSB0"
 
 # Name (and path) of the magnetic field output data file
 # Data type: String
-Mag_File = "mag.dat"
+Mag_File = "/home/pi/Projects/TPSO_Mag/data/mag.dat"
 
 # Name (and path) of the housekeeping output data file
 # Data type: String
-HK_File = "hk.dat"
+HK_File = "/home/pi/Projects/TPSO_Mag/data/hk.dat"
 
 
 [Calibration]
@@ -100,8 +100,8 @@ Cal_Orth_YZ = 0.0
 #           V5n = -5V rail voltage
 #           3V3 = +3.3V rail voltage
 #           1V5 = +1.5V rail voltage
-Cal_Scale_TE = 0.01001445
-Cal_Scale_TS = -0.0085630207
+Cal_Scale_TS = 0.01001445
+Cal_Scale_TE = -0.0085630207
 Cal_Scale_TiltX = -0.000059502559
 Cal_Scale_TiltY = -0.000059575229
 Cal_Scale_V5p = 0.0002
@@ -109,8 +109,8 @@ Cal_Scale_V5n = 0.0004
 Cal_Scale_3V3 = 0.000133
 Cal_Scale_1V5 = 0.0001
 
-Cal_Offset_TE = -273.12595008
-Cal_Offset_TS = 159.61696874
+Cal_Offset_TS = -273.12595008
+Cal_Offset_TE = 159.61696874
 Cal_Offset_TiltX = 1.26686898
 Cal_Offset_TiltY = 1.26022460
 Cal_Offset_V5p = 0.0
